--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,22 @@
 {
-    "name": "witty/laravel-db-backup",
-    "description": "Easy commands to backup and restore databases for Laravel 5 applications",
+    "name": "mydisha/mds-backup",
+    "description": "Laravel 5 Command Line Tool for Backup Database",
+    "keywords": ["laravel", "database", "backup", "artisan"],
     "license": "MIT",
     "authors": [
         {
-            "name": "Larkin Whitaker",
-            "email": "larkinwhitaker@gmail.com"
+            "name": "Dias Taufik Rahman",
+            "email": "diastaufik@gmail.com"
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "illuminate/support": "5.0.* | 5.1.* | 5.2.*"
+        "php": ">=5.5.0",
+        "illuminate/support": "5.0.* | 5.1.* | 5.2.* | 5.3.*"
     },
     "autoload": {
         "psr-0": {
-            "Witty\\LaravelDbBackup": "src/"
+            "Mydisha\\MdsBackup": "src/"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
