--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,11 @@
     ],
     "require": {
         "php": ">=5.5.0",
-        "illuminate/support": "5.0.* | 5.1.* | 5.2.* | 5.3.*"
+        "illuminate/support": "5.*"
     },
     "autoload": {
         "psr-0": {
             "Mydisha\\MdsBackup": "src/"
         }
     },
-    "minimum-stability": "dev"
 }
